--- a/src/pages/[lang]/menu.astro
+++ b/src/pages/[lang]/menu.astro
@@ -64,7 +64,7 @@ const menuData = getLocalizedMenuData(lang, translations);
       <Hero
         title={t('navigation.menu')}
         subtitle={t('menu.featuredSubtitle')}
-        backgroundImage="beach_bar.jpeg"
+        backgroundImage="drinks.jpeg"
         showButtons={false}
         lang={lang}
         translations={translations}
