--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -7,6 +7,7 @@ import Gallery from '../../components/Gallery.astro'
 import Button from '../../components/Button.astro'
 import Footer from '../../components/Footer.astro'
 import FixedBackground from '../../components/FixedBackground.astro'
+import BackgroundOverlay from '../../components/BackgroundOverlay.astro'
 import { getTranslations, useTranslations, languages } from '../../i18n/utils.js'
 
 // Generate static paths for all languages
@@ -86,6 +87,9 @@ const galleryImages = [
 	<body class="bg-white">
 		<!-- Fixed Background -->
 		<FixedBackground src="beach_bar.jpeg" />
+
+		<!-- Background Overlay for transparency effects -->
+		<BackgroundOverlay />
 
 		<!-- Main Content Container -->
 		<div class="z-10 relative">
