--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Button from '../components/Button.astro'
 import Footer from '../components/Footer.astro'
 import LanguageDetector from '../components/LanguageDetector.astro'
 import FixedBackground from '../components/FixedBackground.astro'
+import BackgroundOverlay from '../components/BackgroundOverlay.astro'
 import { getTranslations, useTranslations } from '../i18n/utils.ts'
 
 const lang = 'en'
@@ -76,6 +77,9 @@ const galleryImages = [
 	<body class="bg-white">
 		<!-- Fixed Background -->
 		<FixedBackground src="beach_bar.jpeg" />
+
+		<!-- Background Overlay for transparency effects -->
+		<BackgroundOverlay />
 
 		<!-- Main Content Container -->
 		<div class="z-10 relative">
